[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-firewall"
version = "0.1.0
description = "Retrieval-time trust layer for RAG."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="RAG Firewall Maintainers"}]
dependencies = ["pyyaml>=6.0","regex>=2023.10.3"]

[project.scripts]
ragfw = "rag_firewall.cli:main"
