[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-firewall"
version = "0.4.0"
description = "Client-side retrieval firewall for RAG systems — blocks prompt injection and secret leaks, re-ranks stale or untrusted content, and keeps all data inside your environment."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [{ name = "RAG Firewall Maintainers" }]
license = { text = "Apache-2.0" }
dependencies = [
  "pyyaml>=6.0",
  "regex>=2023.10.3"
]

[project.optional-dependencies]
graph = [
  "networkx>=3.2"
]
dev = [
  "pytest>=7.4",
  "networkx>=3.2"
]

[project.urls]
Homepage = "https://github.com/taladari/rag-firewall"
Repository = "https://github.com/taladari/rag-firewall"

[project.scripts]
ragfw = "rag_firewall.cli:main"
